# kioku-agent-kit-lite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/skills/kioku-lite/: SKILL.md
docs/: benchmark.md  setup-guide.md
docs/acceptance-test/: 2026-03-03_2214_tri-hybrid-search-test.md  2026-03-03_2216_knowledge-graph.html  2026-03-03_2234_post-fix-search-test.md  2026-03-03_memory-backup.md
docs/architecture/: 01-system.md  02-write-save-kg-index.md  03-search.md  04-kg-open-schema.md  05-memory-comparison.md  kg-index.md  save.md  search.md  system.md
docs/blog/: 2026-03-02-kioku-lite-intro-en.md  2026-03-02-kioku-lite-intro-ja.md  2026-03-02-kioku-lite-intro.md  2026-03-04-kioku-server-roadmap-en.md  2026-03-04-kioku-server-roadmap-ja.md  2026-03-04-kioku-server-roadmap.md  2026-03-04-kioku-vs-notebooklm-pm.md
docs/devlogs/: 2026-02-28-DEVLOG-kioku-lite-openclaw-agent.md  2026-02-28-DEVLOG-v0.1.14-fix-connect-source-memories.md  2026-02-28-TESTLOG-enriched-search.md  2026-02-28-TESTLOG-v0.1.14.md  2026-03-01-DEVLOG-kioku-lite-test-report.md  2026-03-02-DEVLOG-openclaw-setup-guide.md  2026-03-03-DEVLOG-acceptance-testing.md
docs/guides/: openclaw-telegram-setup.md  setup-guide-for-general-agent.md  setup-guide-for-openclaw-agent.md
docs/proposals/: 2026-03-03-hub-node-devplan.md  2026-03-03-hub-node-problem.md
docs/tmp/: kioku-vs-mem0.md  memory-tools-comparison.md
src/kioku_lite/: __init__.py  cli.py  config.py  export_graph.py  service.py
src/kioku_lite/pipeline/: db.py  embedder.py  graph_store.py  memory_store.py  models.py
src/kioku_lite/resources/: CLAUDE.agent.md  SKILL.md  USE_CASES.md
src/kioku_lite/resources/openclaw/companion/: SOUL.md  TOOLS.md
src/kioku_lite/resources/openclaw/mentor/: SOUL.md  TOOLS.md
src/kioku_lite/resources/profiles/companion/: AGENTS.md  SKILL.md
src/kioku_lite/resources/profiles/mentor/: AGENTS.md  SKILL.md
src/kioku_lite/resources/scripts/: setup.sh
src/kioku_lite/resources/templates/: README.md  companion.md  mentor.md
src/kioku_lite/search/: bm25.py  graph.py  reranker.py  semantic.py
src/kioku_lite/storage/: markdown.py
tests/: conftest.py  test_cli.py  test_core.py  test_graph_search.py  test_graph_store.py  test_memory_store.py  test_service.py
