[project]
name = "kioku-lite"
version = "0.1.6"
description = "Personal memory engine for AI agents — zero Docker, SQLite-everything (BM25 + sqlite-vec + SQLite graph)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Phúc Nguyễn", email = "phuc.nt.dev@gmail.com" }]
keywords = [
    "memory", "agent", "ai", "rag", "knowledge-graph",
    "sqlite", "vector-search", "bm25", "fastembed",
    "llm", "claude", "multilingual", "vietnamese",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core deps — zero Docker required
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "sqlite-vec>=0.1.0",    # Vector search extension for SQLite (no server)
    "fastembed>=0.4.0",     # Local embeddings via ONNX (no Ollama required)
]

[project.optional-dependencies]
cli = ["typer>=0.9"]    # Required for CLI (kioku-lite save, search, setup, init)
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
kioku-lite = "kioku_lite.cli:app"

[project.urls]
Homepage    = "https://github.com/phuc-nt/kioku-agent-kit-lite"
Repository  = "https://github.com/phuc-nt/kioku-agent-kit-lite"
Issues      = "https://github.com/phuc-nt/kioku-agent-kit-lite/issues"
Changelog   = "https://github.com/phuc-nt/kioku-agent-kit-lite/blob/main/CHANGELOG.md"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/kioku_lite"]
artifacts = ["src/kioku_lite/resources/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
